adicionando rota para listar por data, mais ajustes
