# ProjetoBackEnd/src/swagger_output.json
@@ -166,6 +166,29 @@
         }
       }
     },
+    "/ListarProntuarioPorData": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "dataRegistro",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/atualizaCadastroAdmin": {
       "put": {
         "description": "",
